--- a/style.css
+++ b/style.css
@@ -449,14 +449,6 @@ form {
     float: left;
   }
 
-  .line {
-    width: 100%;
-    height: 8px;
-    background-color: black;
-    margin: 0 auto;
-    border-radius: 4px;
-  }
-
   .social {
     display: flex;
     justify-content: center;
@@ -465,7 +457,7 @@ form {
 
   .social ul {
     padding-top: 10%;
-    padding-bottom: 2%
+    padding-bottom: 2%;
   }
 
   .social ul li {
@@ -552,5 +544,4 @@ form {
     flex-wrap: wrap;
     justify-content: center;
   }
-
 }
