--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@ body {
   background-image: url('background.svg');
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 20%;
+}
+
+.container {
+  min-height: 100vh;
 }
 
 .container,
@@ -96,7 +99,7 @@ nav a {
   width: 80%;
   height: 20%;
   justify-content: center;
-  padding: 8%;
+  padding-top: 50%;
 }
 
 li {
@@ -414,22 +417,50 @@ form {
     background-image: none;
   }
 
+  .my-work {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .app-wrap {
+    background: none;
+    padding: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .next-page {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+    width: 80%;
+    height: 20%;
+    justify-content: center;
+    padding: 8%;
+  }
+
+  .container {
+    max-width: 75%;
+    margin: 0% 5% 0% 5%;
+    min-height: 850px;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
   .app-header {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 1rem 2rem;
     color: #e5e5e5;
-  }
-
-  footer::after {
-    content: "";
-    background-color: transparent;
-    position: absolute;
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    bottom: 0%;
   }
 
   .intro-form h3 {
@@ -524,11 +555,14 @@ form {
 
   .container-body {
     background-image: url('Header-llustration-desktop.svg');
-    background-position: 220px 0;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .about-me {
     background-image: url('about-me-desktop.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .container-form {
